[gd_scene load_steps=8 format=3 uid="uid://c0f1vb40h1ycv"]

[ext_resource type="Script" uid="uid://et04we5do8w2" path="res://Games/FiberOpticCable/fiber_optic_cable.gd" id="1_jqep2"]
[ext_resource type="Shader" uid="uid://hiq0uk6h7bei" path="res://Games/FiberOpticCable/FiberOpticCable.tres" id="2_wtrvl"]
[ext_resource type="Texture2D" uid="uid://ngssssxrevls" path="res://Games/FiberOpticCable/8TxrBGznc-4289732442.jpg" id="3_tjfs0"]
[ext_resource type="PackedScene" uid="uid://c5b08fjbyifw3" path="res://Timer.tscn" id="4_aj7ea"]
[ext_resource type="PackedScene" uid="uid://bvcwhai1hlyt4" path="res://TweenedPlayer.tscn" id="5_4w11p"]

[sub_resource type="Theme" id="Theme_wtrvl"]
default_font_size = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tjfs0"]
shader = ExtResource("2_wtrvl")
shader_parameter/Transparency = 0.0

[node name="Control" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqep2")

[node name="Question" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tjfs0")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_wtrvl")
columns = 2

[node name="Button0" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Lead Pipe"

[node name="Button1" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Lead Pipe"

[node name="Button2" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Lead Pipe"

[node name="Button3" type="Button" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Lead Pipe"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="Image" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_tjfs0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" parent="." instance=ExtResource("4_aj7ea")]
position = Vector2(36, 444)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="TweenedPlayer" parent="." instance=ExtResource("5_4w11p")]

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
